token data attributes

--- a/truespeak/templates/done_token.html
+++ b/truespeak/templates/done_token.html
@@ -12,6 +12,6 @@
     <body>
         You're done!
         <br /><br />
-        <input type="hidden" id="plugin-token" value="{{ plugin_token }}"></input>
+        <input type="hidden" id="plugin-token" value="" data-auth_token="{{ plugin_token }}" data-fb_id="{{ fb_id }}" data-fb_handle="{{ fb_handle }}"></input>
     </body>
 </html>
