--- a/truespeak/templates/connect_with_facebook.html
+++ b/truespeak/templates/connect_with_facebook.html
@@ -60,7 +60,7 @@
             var url = "/facebook_callback/?token="+token;
             $.get(url, function(data) {
                 $('#connect-result').html(data);
-                window.location = "http://127.0.0.1/done_token/";
+                window.location = "http://fakeblock.herokuapp.com/done_token/";
             });
 
             console.log('Good to see you, ' + response.id + '.');
