--- a/truespeak/templates/connect_with_facebook_bootstrap.html
+++ b/truespeak/templates/connect_with_facebook_bootstrap.html
@@ -143,8 +143,12 @@
 
     <div class="jumbotron">
         <h1 style="float:left;">ParselTongue</h1>
-        <a class="btn btn-large btn-success" style="float:right;margin-top:25px;"
+        <a class="btn btn-large btn-success" style="display:none;float:right;margin-top:25px;"
            href="#"  scope="" data-show-faces="false" data-width="400" data-max-rows="1">Sign up today</a>
+            <div class="fb-login-button" style="float:right;margin-top:25px;width:100px;float: right;
+position: relative;
+left: -65px;
+top: 3px;" scope="" data-size="xlarge" data-show-faces="false" data-width="400" data-max-rows="1"></div>
         <p class="lead" style="margin-top: 15px;
 margin-bottom: 5px;
 width: 100%;
@@ -182,7 +186,6 @@ font-size: 25px;" >Client-side encrypted communication across the web.</p>
         <img style="margin-top:30px;width:100%;" src="http://31.media.tumblr.com/eca927ed58e655bd139fa9f269724a03/tumblr_mf09rsPUOg1r1mkubo1_500.gif"/>
         <p style="margin-top:40px;"> @shubhrosaha @swang_93 @blumua @MaxFowler2</p>
     </div>
-
 
 
 </div> <!-- /container -->
