full screen load

--- a/truespeak/templates/connect_with_facebook_bootstrap.html
+++ b/truespeak/templates/connect_with_facebook_bootstrap.html
@@ -169,8 +169,7 @@ float: left;
 font-size: 25px;" >Client-side encrypted communication across the web.</p>
 
         <img class="snake_image" style="margin-top:30px;width:100%;" src="http://fc06.deviantart.net/fs70/i/2012/329/3/f/black_and_white_snake_by_evilpurplechicken-d5m6g7f.jpg"/>
-        <img class="snake_loading" style="margin-top:30px;width:100%;position: relative;opacity:0.0;
-top: -450px;" src="http://31.media.tumblr.com/0577006eea5f1e35ee93e8f0443bedca/tumblr_mov47jrB161stfe17o1_500.gif"/>
+        <img class="snake_loading" style="left:0px;width:100%;position:absolute;opacity:0.0;top:0px;" src="http://31.media.tumblr.com/0577006eea5f1e35ee93e8f0443bedca/tumblr_mov47jrB161stfe17o1_500.gif"/>
 
     </div>
 
