--- a/truespeak/templates/connect_with_facebook_bootstrap.html
+++ b/truespeak/templates/connect_with_facebook_bootstrap.html
@@ -198,7 +198,12 @@ font-size: 25px;" >Client-side encrypted communication across the web.</p>
     <div class="footer">
 
         <img style="margin-top:30px;width:100%;" src="http://31.media.tumblr.com/eca927ed58e655bd139fa9f269724a03/tumblr_mf09rsPUOg1r1mkubo1_500.gif"/>
-        <p style="margin-top:40px;"> @shubhrosaha @swang_93 @blumua @MaxFowler2</p>
+        <p style="margin-top:40px;">
+            <a style="margin-right:20px" href="https://twitter.com/shubhrosaha">@shubhrosaha</a>
+            <a style="margin-right:20px" href="https://twitter.com/swang_93">@swang_93</a>
+            <a style="margin-right:20px" href="https://twitter.com/blumua">@blumua</a>
+            <a style="margin-right:20px" href="https://twitter.com/MaxFowler2">@MaxFowler2</a>
+        </p>
     </div>
 
     <script>
