--- a/truespeak/templates/done_token.html
+++ b/truespeak/templates/done_token.html
@@ -8,6 +8,17 @@
         <link rel="stylesheet" href="{{ MEDIA_URL }}css/pure-min.css">
         <link rel="stylesheet" href="{{ MEDIA_URL }}css/styles.css">
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-3539301-15', 'herokuapp.com');
+            ga('send', 'pageview');
+        </script>
+
     </head>
     <body>
         You're done!
