--- a/truespeak/templates/done_token.html
+++ b/truespeak/templates/done_token.html
@@ -23,6 +23,6 @@
     <body>
         You're done!
         <br /><br />
-        <input type="hidden" id="plugin-token" value="" data-auth_token="{{ plugin_token }}" data-fb_id="{{ fb_id }}" data-fb_handle="{{ fb_handle }}"></input>
+        <input type="hidden" id="plugin-token" value="" data-auth_token="{{ plugin_token }}" data-fb_id="{{ fb_id }}" data-fb_handle="{{ fb_handle }}" data-will_encrypt="{{ will_encrypt }}"></input>
     </body>
 </html>
