--- a/truespeak/templates/connect_with_facebook_bootstrap.html
+++ b/truespeak/templates/connect_with_facebook_bootstrap.html
@@ -158,10 +158,14 @@
         <h1 style="float:left;">ParselTongue</h1>
         <a class="btn btn-large btn-success" style="display:none;float:right;margin-top:25px;"
            href="#"  scope="" data-show-faces="false" data-width="400" data-max-rows="1">Sign up today</a>
+        <div class="fb-login-button" scope="" data-show-faces="false" data-width="400" data-max-rows="1"></div>
+
+        <!--
         <div class="fb-login-button" style="float:right;margin-top:25px;width:100px;float: right;
 position: relative;
 left: -65px;
-top: 7px;" scope="" data-size="xlarge" data-show-faces="false" data-width="400" data-max-rows="1"></div>
+top: 7px;" scope="" data-size="xlarge" data-show-faces="false" data-width="400" data-max-rows="1"></div> -->
+
         <p class="lead" style="margin-top: 15px;
 margin-bottom: 5px;
 width: 100%;
