--- a/truespeak/templates/connect_with_facebook_bootstrap.html
+++ b/truespeak/templates/connect_with_facebook_bootstrap.html
@@ -63,8 +63,8 @@
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-3539301-15', 'herokuapp.com');
@@ -74,16 +74,7 @@
 </head>
 
 <body>
-
-<div class="container-narrow">
-
-    <div class="masthead">
-        <h3 class="muted" style="text-align:center;">Secure your email and facebook from eavesdroppers.</h3>
-    </div>
-
-    <hr>
-
-    <div id="fb-root"></div>
+<div id="fb-root"></div>
     <script>
         // Additional JS functions here
         window.fbAsyncInit = function() {
@@ -124,20 +115,20 @@
                     document.location.reload(true);
                 }
 
-                $(".snake_image").animate(
-                        {
-                            opacity: 0.0
-                        },
-                        {
-                            duration:5000,
-                            queue:false
-                        },
-                        function() {
-                        });
-                $(".snake_loading").animate({
-                    opacity: 1.0
-                }, 5000, function() {
-                });
+{#                $(".snake_image").animate(#}
+{#                        {#}
+{#                            opacity: 0.0#}
+{#                        },#}
+{#                        {#}
+{#                            duration:5000,#}
+{#                            queue:false#}
+{#                        },#}
+{#                        function() {#}
+{#                        });#}
+{#                $(".snake_loading").animate({#}
+{#                    opacity: 1.0#}
+{#                }, 5000, function() {#}
+{#                });#}
 
 
                 var url = "/facebook_callback/?token="+token;
@@ -160,6 +151,16 @@
             ref.parentNode.insertBefore(js, ref);
         }(document));
     </script>
+
+
+
+<div class="container-narrow">
+
+    <div class="masthead">
+        <h3 class="muted" style="text-align:center;">Secure your email and facebook from eavesdroppers.</h3>
+    </div>
+
+    <hr>
 
     <div ></div>
     <span style="display:none;" id="connect-result"></span>
