done token page

--- a/truespeak/templates/done_token.html
+++ b/truespeak/templates/done_token.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{ PAGE_TITLE }} | Jasper Dashboard</title>
+        <title>ParselTongue</title>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
         <link rel="stylesheet" href="{{ MEDIA_URL }}css/pure-min.css">
         <link rel="stylesheet" href="{{ MEDIA_URL }}css/styles.css">
+           <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
         <script>
@@ -20,8 +21,13 @@
         </script>
 
     </head>
-    <body>
-        You're done!
+    <body style="background-image:url('http://cf.drafthouse.com/_uploads/galleries/240/the-sound-of-music-image_2.jpg');">
+
+        <h1 style="font-size: 63px;
+left: 65px;
+color: white;
+position: absolute;
+top: 86px;"> Welcome to ParselTongue. </h1>
         <br /><br />
         <input type="hidden" id="plugin-token" value="" data-auth_token="{{ plugin_token }}" data-fb_id="{{ fb_id }}" data-fb_handle="{{ fb_handle }}" data-will_encrypt="{{ will_encrypt }}"></input>
     </body>
