--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -3,15 +3,17 @@
 <head>
 
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="/static/truespeak.css" rel="stylesheet">
     {#    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">#}
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="/static/truespeak.js"></script>
 
 
     <meta charset="utf-8">
     <title>ParselTongue</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Client side encrypted communication across the web.">
+    <meta name="author" content="Max Fowler, Josh Blum, Stephanie Wang">
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -27,11 +29,18 @@
 
 <body>
 
+
 <div>
 
-    {% block body %}
+    <div class="top-nav">
+
+    </div>
+
+    <div class="body-div">
+        {% block body %}
             <h1> body </h1>
-    {% endblock %}
+        {% endblock %}
+    </div>
 
 </div>
 
