--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -32,7 +32,7 @@
         .ps-explanation p {
             font-size: 22px;
             line-height: 31px;
-            width: 100%;
+            width: 95%;
             margin-bottom: 39px;
             text-align: left;
         }
@@ -68,7 +68,7 @@
 <div class="container-narrow">
 
     <div class="masthead">
-        <h3 class="muted" style="text-align:center;">Secure your email and facebook from eavesdroppers.</h3>
+        <h3 class="muted" style="text-align:left;">Secure your email and facebook from eavesdroppers.</h3>
     </div>
 
     <hr>
@@ -132,10 +132,10 @@ font-size: 25px;" >Client-side encrypted communication across the web.</p>
 
         <img style="margin-top:30px;width:100%;" src="http://31.media.tumblr.com/eca927ed58e655bd139fa9f269724a03/tumblr_mf09rsPUOg1r1mkubo1_500.gif"/>
         <p style="margin-top:40px;">
-            <a style="margin-right:20px" href="https://twitter.com/shubhrosaha">@shubhrosaha</a>
-            <a style="margin-right:20px" href="https://twitter.com/swang_93">@swang_93</a>
-            <a style="margin-right:20px" href="https://twitter.com/blumua">@blumua</a>
-            <a style="margin-right:20px" href="https://twitter.com/MaxFowler2">@MaxFowler2</a>
+            <a style="margin-right:100px" href="https://twitter.com/shubhrosaha">@shubhrosaha</a>
+            <a style="margin-right:100px" href="https://twitter.com/swang_93">@swang_93</a>
+            <a style="margin-right:100px" href="https://twitter.com/blumua">@blumua</a>
+            <a href="https://twitter.com/MaxFowler2">@MaxFowler2</a>
         </p>
     </div>
 
