--- a/truespeak/templates/home.html
+++ b/truespeak/templates/home.html
@@ -114,8 +114,9 @@ font-size: 25px;" >Client-side encrypted communication across the web.</p>
         <div class="ps-explanation">
             <h3>Secure</h3>
             <p>Speak freely and sleep easy knowing that only the intended recipients of your messages can read them. The government,
-                targeted advertisers, Google, Facebook and your Mom can all have fun trying to read your messages which
-                need to be decrypted with a key only your message recipient has.</p>
+                targeted advertisers, Google, Facebook and Mom will all be unable to read your messages even if they are eavesdropping
+                on them. With ParselTongue installed all of your communications can only be decrypted with
+                the private key only your message recipient has.</p>
             <h3>Seamless</h3>
             <p>Once you've installed the ParselTongue chrome extension and connected with Facebook, that's it. ParselTonge
                 will keep your communications secure and you'll forget it's even there.</p>
