--- a/truespeak/templates/register.html
+++ b/truespeak/templates/register.html
@@ -7,31 +7,35 @@
     <div class="container">
 
         <!-- Main component for a primary marketing message or call to action -->
-        <div class="jumbotron welcome-container login-wrapper">
+        <div class="jumbotron welcome-container">
 
             {% comment %}
              <img class="sound-of-music" src="https://d2nh4f9cbhlobh.cloudfront.net/_uploads/galleries/240/the-sound-of-music-image_2.jpg"/>
             <img class="sound-of-music upside-down" src="https://d2nh4f9cbhlobh.cloudfront.net/_uploads/galleries/240/the-sound-of-music-image_2.jpg"/>
             {% endcomment %}
             <div class="over-sound-of-music">
-                <h1 class="sound-of-music-header">Sign In</h1>
-                <form role="form">
+                <h1 class="sound-of-music-header">Welcome to ParselTongue</h1>
+                <form role="form" class="register_form">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email</label>
-                        <input type="email" class="form-control register-input login_email" id="exampleInputEmail1" placeholder="Enter email">
+                        <input type="email" class="form-control register-input register_email" id="exampleInputEmail1" placeholder="Enter email">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control register-input login_password" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" class="form-control register-input register_password1" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                    <span class="password-error-message login_error"> Oops, email/password not found. Try again? </span>
-                    <button type="submit" class="btn btn-lg btn-primary register-button login_button">Submit</button>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Same Password</label>
+                        <input type="password" class="form-control register-input register_password2" id="exampleInputPassword2" placeholder="Password">
+                    </div>
+                    <span class="password-error-message register_error"> Oops, both passwords must be the same. </span>
+                    <button type="submit" class="btn btn-lg btn-primary register-button register_button">Register</button>
                     <div class="loading-gif">
                         <img src="/static/flakes.gif"/>
                     </div>
                     <div style="clear:both;"></div>
                 </form>
-                <img class="snake-drawing2" src="http://fc06.deviantart.net/fs70/f/2012/172/a/5/snake_by_zeusolympia-d54a3z0.jpg"/>
+                <img class="snake-drawing" src="http://upload.wikimedia.org/wikipedia/commons/1/1d/Black_snake_1_%28PSF%29.png"/>
                 <div style="clear:both;"></div>
             </div>
             <div style="clear:both;"></div>
