--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -9,7 +9,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/truespeak.css" rel="stylesheet">
     {#    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">#}
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="/static/truespeak.js"></script>
 
@@ -30,9 +30,6 @@
         ga('send', 'pageview');
     </script>
 
-    <!-- Custom styles for this template -->
-    <link href="navbar-static-top.css" rel="stylesheet">
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -52,42 +49,52 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand pt-logo" href="#">ParselTongue</a>
+            <a class="navbar-brand pt-logo" href="/register/">ParselTongue</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {% if not logged_in %}
-                <li class="active"><a href="#">Register</a></li>
+                    <li {% if request.path == "/register/" %}class="active"{% endif %}><a href="/register/">Register</a></li>
                 {% else %}
-                <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="#">Home</a></li>
                 {% endif %}
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li  {% if request.path == "/about/" %}class="active"{% endif %}><a href="/about/">About</a></li>
+                <li  {% if request.path == "/contact/" %}class="active"{% endif %}><a href="/contact/">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if logged_in %}
-                <li class="active"><a href="./">Docs</a></li>
-                <li><a href="../navbar/">Settings</a></li>
+                    <li {% if request.path == "/docs/" %}class="active"{% endif %}><a href="./">Docs</a></li>
+                    <li {% if request.path == "/settings/" %}class="active"{% endif %}><a href="/settings/">Settings</a></li>
                 {% else %}
-                <li class="already-registered"> already registered? </li>
-                <a href="/login/" class="btn btn-small btn-success sign-in-button">sign in</a>
+                    {% if request.path != "/login/" %}
+                        <li class="already-registered"> already registered? </li>
+                        <a href="/login/" class="btn btn-small btn-success sign-in-button">sign in</a>
+                    {% endif %}
                 {% endif %}
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </div>
 
-
+<div class="atleast">
 {% block body %}
 {% endblock %}
+</div>
 
 
+<div class="pt-footer">
+    <div class="footer-bar"></div>
+    <div class="footer-wrapper">
+        <div class="footer-text latin">veritas non auctoritas facit legem</div>
+        <a style="margin-right:30px" class="twitter-link" href="https://twitter.com/swang_93">@swang_93</a>
+        <a style="margin-right:30px" class="twitter-link" href="https://twitter.com/blumua">@blumua</a>
+        <a style="margin-right:30px" class="twitter-link" href="https://twitter.com/MaxFowler2">@maxfowler2</a>
+        <div style="clear:both;"></div>
+    </div>
+    <div style="clear:both;"></div>
+</div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="../../dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
 
