--- a/truespeak/templates/welcome.html
+++ b/truespeak/templates/welcome.html
@@ -3,6 +3,17 @@
 
 {% block body %}
 
+       <div class="jumbotron welcome-container welcome-wrapper">
 
+             <img class="sound-of-music" src="https://d2nh4f9cbhlobh.cloudfront.net/_uploads/galleries/240/the-sound-of-music-image_2.jpg"/>
+           {% comment %}
+            <img class="sound-of-music upside-down" src="https://d2nh4f9cbhlobh.cloudfront.net/_uploads/galleries/240/the-sound-of-music-image_2.jpg"/>
+            {% endcomment %}
+            <div class="over-sound-of-music">
+                <h1 class="sound-of-music-header welcome-header">You should receive a confirmation email in a few seconds.</h1>
+                <h1 class="sound-of-music-header welcome-email-address welcome-header">{{ email_address }}</h1>
+            </div>
+            <div style="clear:both;"></div>
+        </div>
 
 {% endblock %}
