--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -8,10 +8,12 @@
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/truespeak.css" rel="stylesheet">
-    {#    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">#}
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="/static/truespeak.js"></script>
+
+    {% block css %}
+    {% endblock %}
 
 
     <meta charset="utf-8">
@@ -49,7 +51,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand pt-logo" {% if user.is_authenticated %}href="/settings/"{% else %}href="/register/"{% endif %}>ParselTongue</a>
+            <a class="navbar-brand pt-logo" {% if user.is_authenticated %}href="/settings/"{% else %}href="/"{% endif %}>ParselTongue</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -83,7 +85,6 @@
 <div class="pt-footer">
     <div class="footer-bar"></div>
     <div class="footer-wrapper">
-        <div class="footer-text latin">veritas non auctoritas facit legem</div>
         <a style="margin-right:30px" class="twitter-link" href="https://twitter.com/swang_93">@swang_93</a>
         <a style="margin-right:30px" class="twitter-link" href="https://twitter.com/blumua">@blumua</a>
         <a style="margin-right:30px" class="twitter-link" href="https://twitter.com/MaxFowler2">@maxfowler2</a>
