--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+    
+    <link rel="shortcut icon" href="/static/favicon.ico">
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/truespeak.css" rel="stylesheet">
